src-tauri/src/snapshots/block_notes_lib__backlink_query__tests__snapshot_backlink_query_empty.snap
---
source: src/backlink_query.rs
assertion_line: 2561
expression: resp
---
items: []
next_cursor: "[CURSOR]"
has_more: false
total_count: 0
