src-tauri/src/snapshots/block_notes_lib__backlink_query__tests__snapshot_backlink_query_with_filter.snap
---
source: src/backlink_query.rs
assertion_line: 2723
expression: resp
---
items:
  - id: "[ULID]"
    block_type: content
    content: Source A
    parent_id: ~
    position: ~
    deleted_at: ~
    archived_at: ~
    is_conflict: false
    conflict_type: ~
next_cursor: "[CURSOR]"
has_more: false
total_count: 1
